Obtener metricas de un deportista por su deportista_id
